using System;
using System.Collections.Generic;
using System.Linq;
using System.Text;
using System.Threading.Tasks;

namespace SpaceInvaders.Interface;
    public interface IDraw
    {
         void Draw(Graphics g);
    }

